force-app/main/default/objects/Study_Session_Time__c/Study_Session_Time__c.object-meta.xml
<CustomObject>
    <description>The time and occurrence configuration of a study session.</description>
    <label>Study Session Time</label>
    <nameField>
        <label>Study Session Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Session Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>