force-app/main/default/objects/Study_Session_Time__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <description>Only update study events after this date if Create/Update Settings is set to &quot;Create/Update from Change Date&quot; or &quot;Create/Update after Change Date&quot;.</description>
    <inlineHelpText>Only update study events after this date if Create/Update Settings is set to &quot;Create/Update from Change Date&quot; or &quot;Create/Update after Change Date&quot;.</inlineHelpText>
    <label>Change Date</label>
    <type>Date</type>
</CustomField>