force-app/main/default/objects/Study_Session_Time__c/fields/Clone_From_Id__c.field-meta.xml
<CustomField>
    <fullName>Clone_From_Id__c</fullName>
    <label>Clone From Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>