force-app/main/default/objects/Study_Session_Time__c/fields/Default_Facility__c.field-meta.xml
<CustomField>
    <fullName>Default_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Study Session Times</relationshipLabel>
    <relationshipName>Study_Session_Times</relationshipName>
    <type>Lookup</type>
</CustomField>