force-app/main/default/objects/Study_Session_Time__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date (Override)</label>
    <type>Date</type>
</CustomField>