force-app/main/default/objects/Study_Session_Time__c/fields/Ignore_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Holidays</label>
    <type>Checkbox</type>
</CustomField>