force-app/main/default/objects/Study_Session_Time__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <label>Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Session_Time_Recurrence</valueSetName>
    </valueSet>
</CustomField>