force-app/main/default/objects/Study_Session_Time__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date (Override)</label>
    <type>Date</type>
</CustomField>