force-app/main/default/objects/Study_Session_Time__c/fields/Study_Session__c.field-meta.xml
<CustomField>
    <fullName>Study_Session__c</fullName>
    <label>Study Session</label>
    <referenceTo>Study_Session__c</referenceTo>
    <relationshipLabel>Study Session Times</relationshipLabel>
    <relationshipName>Study_Session_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>