force-app/main/default/objects/Study_Session_Time__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Timezone is taken from the related Campus.</description>
    <formula>TEXT(Study_Session__r.Study_Offering__r.Campus__r.Timezone__c)</formula>
    <inlineHelpText>Timezone is taken from the related Campus.</inlineHelpText>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>