force-app/main/default/objects/Study_Session_Time__c/fields/Update_Action__c.field-meta.xml
<CustomField>
    <fullName>Update_Action__c</fullName>
    <description>This is used to determine if the study events related to the session time should be recreated or create/update when session is set to &quot;Create/Update Events&quot; status.</description>
    <inlineHelpText>This is used to determine if the study events related to the session time should be recreated or create/update when session is set to &quot;Create/Update Events&quot; status.</inlineHelpText>
    <label>Update Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recreate</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
                <default>true</default>
                <label>Upsert</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>