force-app/main/default/objects/Study_Session_Time__c/fields/Update_Settings__c.field-meta.xml
<CustomField>
    <fullName>Update_Settings__c</fullName>
    <description>Session Create/Update Events will only update existing events for this Session Time that match the specified Update Settings.</description>
    <inlineHelpText>Session Create/Update Events will only update existing events for this Session Time that match the specified Update Settings.</inlineHelpText>
    <label>Update Settings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create/Update from today</fullName>
                <default>true</default>
                <label>Create/Update from today</label>
            </value>
            <value>
                <fullName>Create/Update after today</fullName>
            </value>
            <value>
                <fullName>Create/Update from Change Date</fullName>
            </value>
            <value>
                <fullName>Create/Update after Change Date</fullName>
            </value>
            <value>
                <fullName>Create/Update all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>